CodeBaseServer2020/development/CBS653_SRVRECOVER/d4declar.h

S4EXPORT int S4FUNCTION code4unlock( CODE4 S4PTR * ) ;
S4EXPORT void S4FUNCTION f4assignCurrency( FIELD4 S4PTR *, const char S4PTR * ) ;
S4EXPORT char S4PTR *S4FUNCTION f4currency( const FIELD4 S4PTR *, short ) ;
S4EXPORT char S4PTR *S4FUNCTION f4dateTime( const FIELD4 S4PTR * ) ;
S4EXPORT void S4FUNCTION f4assignDateTime( FIELD4 S4PTR *, const char S4PTR * ) ;
/* DATA4 */
S4EXPORT S4CONST char S4PTR * S4FUNCTION d4alias( S4CONST DATA4 S4PTR * ) ;
S4EXPORT void S4FUNCTION d4aliasSet( DATA4 S4PTR *, const char S4PTR * ) ;
S4EXPORT int S4FUNCTION d4append( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4appendBlank( DATA4 S4PTR * ) ;
S4EXPORT short S4FUNCTION d4appendStart( DATA4 S4PTR *, short ) ;
S4EXPORT void S4FUNCTION d4blank( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4bof( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4bottom( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4check( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4close( DATA4 S4PTR * ) ;
S4EXPORT DATA4 S4PTR * S4FUNCTION d4create( CODE4 S4PTR *, const char S4PTR *, const FIELD4INFO S4PTR *, const TAG4INFO S4PTR * ) ;
S4EXPORT void S4FUNCTION d4delete( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4eof( DATA4 S4PTR * ) ;
S4EXPORT FIELD4 S4PTR * S4FUNCTION d4field( DATA4 S4PTR *, const char S4PTR * ) ;
S4EXPORT FIELD4 S4PTR * S4FUNCTION d4fieldJ( DATA4 S4PTR *, short ) ;
S4EXPORT int S4FUNCTION d4fieldNumber( DATA4 S4PTR *, const char S4PTR * ) ;
S4EXPORT const char S4PTR *S4FUNCTION d4fileName( DATA4 S4PTR * ) ;
   #define d4flush( d4 ) ( dfile4flush( (d4)->dataFile ) )
   S4EXPORT int S4FUNCTION d4flush( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4freeBlocks( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4goLow( DATA4 S4PTR *, const long, short ) ;
S4EXPORT int S4FUNCTION d4goBof( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4goEof( DATA4 S4PTR * ) ;
S4EXPORT INDEX4 S4PTR * S4FUNCTION d4index( DATA4 S4PTR *, const char S4PTR * ) ;
S4EXPORT int S4FUNCTION d4lockAllVB( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4lockAppendVB( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4lockFileVB( DATA4 * ) ;
S4EXPORT int S4FUNCTION d4lockVB( DATA4 *, const long ) ;
   S4EXPORT int S4FUNCTION d4lockAdd( DATA4 S4PTR *, long ) ;
   S4EXPORT int S4FUNCTION d4lockAddAll( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4lockAddAppend( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4lockAddFile( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4lockAll( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4lockAppend( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4lockFile( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4lock( DATA4 S4PTR *, const long ) ;
   S4EXPORT int S4FUNCTION d4log( DATA4 S4PTR *, const int ) ;
   S4EXPORT int S4FUNCTION d4memoCompress( DATA4 S4PTR * ) ;
      #define d4numFields( d4 ) ((((d4)->fields[(d4)->dataFile->nFields-1].type == '0') ? ((d4)->dataFile->nFields - 1) : ((d4)->dataFile->nFields)))
      #define d4numFields( d4 ) ((d4)->dataFile->nFields)
   S4EXPORT short int S4FUNCTION d4numFields( DATA4 S4PTR * ) ;
S4EXPORT DATA4 S4PTR *S4FUNCTION d4open( CODE4 S4PTR *, const char S4PTR * ) ;
S4EXPORT DATA4 S4PTR *S4FUNCTION d4openClone( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4optimizeWrite( DATA4 S4PTR *, const int ) ;
S4EXPORT int S4FUNCTION d4pack( DATA4 S4PTR * ) ;
S4EXPORT double S4FUNCTION d4position( DATA4 S4PTR * ) ;
S4EXPORT long S4FUNCTION d4recCountDo( DATA4 S4PTR * ) ;
   S4EXPORT long S4FUNCTION d4recNoLow( DATA4 S4PTR * ) ;
   #define d4recNo( d4 )   ( (d4)->recNum )
   #define d4record( d4 )  ( (d4)->record )
   #define d4recWidth( d4 ) dfile4recWidth( (d4)->dataFile )
   #define d4recNo( d4 )  d4recNoLow( d4 )
   #define d4record( d4 ) d4recordLow( d4 )
   #define d4recWidth( d4 ) d4recWidthLow( d4 )
S4EXPORT char S4PTR *S4FUNCTION d4recordLow( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4refresh( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4skip( DATA4 S4PTR *, const long ) ;
S4EXPORT int S4FUNCTION d4top( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4zap( DATA4 S4PTR *, const long, const long ) ;
   #define d4recCount( d4 ) ( dfile4recCount( ( d4->dataFile ), 0 ) )
   #define d4recCount( d4 ) ( d4recCountDo2( d4, !ASSUME4LOCKED ) )
   S4EXPORT int S4FUNCTION d4reindex( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4seek( DATA4 S4PTR *, const char S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4seekDouble( DATA4 S4PTR *, const double ) ;
   S4EXPORT short S4FUNCTION d4seekN( DATA4 S4PTR *, const char S4PTR *, const short ) ;
   S4EXPORT TAG4 S4PTR *S4FUNCTION d4tag( DATA4 S4PTR *, const char S4PTR * const ) ;
   S4EXPORT TAG4 S4PTR *S4FUNCTION d4tagDefault( DATA4 S4PTR * ) ;
   S4EXPORT TAG4 S4PTR *S4FUNCTION d4tagNext( DATA4 S4PTR *, TAG4 S4PTR * ) ;
   S4EXPORT TAG4 S4PTR *S4FUNCTION d4tagPrev( DATA4 S4PTR *, TAG4 S4PTR * ) ;
   S4EXPORT void S4FUNCTION d4tagSelect( DATA4 S4PTR *, TAG4 S4PTR * ) ;
   S4EXPORT TAG4 S4PTR *S4FUNCTION d4tagSelected( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4tagSync( DATA4 S4PTR *, TAG4 S4PTR * const ) ;
      S4EXPORT int S4FUNCTION d4unlock( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4seekNext( DATA4 S4PTR *, const char S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4seekNextDouble( DATA4 S4PTR *, const double ) ;
   S4EXPORT short S4FUNCTION d4seekNextN( DATA4 S4PTR *, const char S4PTR *, const short ) ;
   S4EXPORT int S4FUNCTION d4deleted( DATA4 S4PTR * ) ;
S4EXPORT FIELD4INFO S4PTR * S4FUNCTION d4fieldInfo( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION d4remove( DATA4 S4PTR * ) ;
#define d4write( a, b ) ( d4writeLow( a, b, 0, 1 ) )
S4EXPORT short S4FUNCTION d4changed( DATA4 S4PTR *, short ) ;
   S4EXPORT long S4FUNCTION d4positionSet( DATA4 S4PTR *, const double ) ;
   S4EXPORT int S4FUNCTION d4optimize( DATA4 S4PTR *, const int ) ;
   S4EXPORT int S4FUNCTION d4positionSet( DATA4 S4PTR *, const double ) ;
   S4EXPORT void S4FUNCTION d4recall( DATA4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION d4refreshRecord( DATA4 S4PTR * ) ;
S4EXPORT short S4FUNCTION d4logStatusCB( DATA4 * ) ;
   #define d4logStatus( d4 ) ( 0 )
      #define d4logStatus( d4 ) ( 0 )
      #define d4logStatus( d4 ) ( (d4)->logVal == 0 ? 0 : 1 )
S4EXPORT int S4FUNCTION date4assignLow( char S4PTR *, const long, int ) ;
S4EXPORT S4CONST char *S4FUNCTION date4cdow( const char S4PTR * ) ;
S4EXPORT S4CONST char *S4FUNCTION date4cmonth( const char S4PTR * ) ;
S4EXPORT int S4FUNCTION date4dow( const char S4PTR * ) ;
S4EXPORT void S4FUNCTION date4format( const char S4PTR *, char S4PTR *, char S4PTR * ) ;/* 'dt' may be 'result'*/
S4EXPORT void S4FUNCTION date4init( char S4PTR *, const char S4PTR *, char S4PTR * ) ;
S4EXPORT int S4FUNCTION date4isLeap( const char S4PTR * ) ;
S4EXPORT long S4FUNCTION date4long( const char S4PTR * ) ;
S4EXPORT void S4FUNCTION date4timeNow( char S4PTR * ) ;
S4EXPORT void S4FUNCTION date4today( char S4PTR * ) ;
#define date4day( datePtr )    ( (int)c4atol( (datePtr) + 6, 2 ) )
#define date4month( datePtr )  ( (int)c4atol( (datePtr) + 4, 2 ) )
#define date4year( yearPtr )   ( (int)c4atol( (yearPtr), 4 ) )
S4EXPORT int S4FUNCTION error4file( CODE4 S4PTR *, S4CONST char S4PTR *, const int ) ;
S4EXPORT int S4FUNCTION error4set( CODE4 S4PTR *, const int ) ;
S4EXPORT const char S4PTR * S4FUNCTION error4text( CODE4 S4PTR *, const long ) ;
         S4EXPORT void S4FUNCTION error4exitTest( CODE4 S4PTR * ) ;
   S4EXPORT void S4FUNCTION error4exitTest( CODE4 S4PTR * ) ;
S4EXPORT void S4FUNCTION f4assignChar( FIELD4 S4PTR *, const int ) ;
S4EXPORT void S4FUNCTION f4assignDouble( FIELD4 S4PTR *, const double ) ;
S4EXPORT void S4FUNCTION f4assignField( FIELD4 S4PTR *, const FIELD4 S4PTR * ) ;
S4EXPORT void S4FUNCTION f4assignLong( FIELD4 S4PTR *, const long ) ;
S4EXPORT void S4FUNCTION f4assignN( FIELD4 S4PTR *, const char S4PTR *, const unsigned int ) ;
S4EXPORT void S4FUNCTION f4assignNull( FIELD4 S4PTR * ) ;
S4EXPORT void S4FUNCTION f4blank( FIELD4 S4PTR * ) ;
S4EXPORT int S4FUNCTION f4char( const FIELD4 S4PTR * ) ;
S4EXPORT DATA4 S4PTR *S4FUNCTION f4data( const FIELD4 S4PTR * ) ;
S4EXPORT int S4FUNCTION f4decimals( const FIELD4 S4PTR * ) ;
S4EXPORT double S4FUNCTION f4double( const FIELD4 S4PTR * ) ;
S4EXPORT int S4FUNCTION f4int( const FIELD4 S4PTR * ) ;
S4EXPORT unsigned long S4FUNCTION f4len( const FIELD4 S4PTR * ) ;
S4EXPORT long S4FUNCTION f4long( const FIELD4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION f4memoAssign( FIELD4 S4PTR *, const char S4PTR * ) ;
   S4EXPORT int S4FUNCTION f4memoAssignN( FIELD4 S4PTR *, const char S4PTR *, const unsigned int ) ;
   S4EXPORT int S4FUNCTION f4memoFree( FIELD4 S4PTR * ) ;
   S4EXPORT unsigned long S4FUNCTION f4memoLen( FIELD4 S4PTR * ) ;
   S4EXPORT unsigned long S4FUNCTION f4memoNcpy( FIELD4 S4PTR *, char S4PTR *, const unsigned int ) ;
   S4EXPORT char S4PTR * S4FUNCTION f4memoPtr( FIELD4 S4PTR * ) ;
S4EXPORT S4CONST char S4PTR * S4FUNCTION f4name( S4CONST FIELD4 S4PTR * ) ;
S4EXPORT unsigned long S4FUNCTION f4ncpy( FIELD4 S4PTR *, char S4PTR *, const unsigned int ) ;
S4EXPORT int S4FUNCTION f4null( const FIELD4 S4PTR * ) ;
S4EXPORT int S4FUNCTION f4number( const FIELD4 S4PTR * ) ;
   #define f4ptr( f4 )  ( (f4)->data->record + (f4)->offset )
   S4EXPORT char S4PTR * S4FUNCTION f4ptr( const FIELD4 S4PTR * ) ;
S4EXPORT char S4PTR * S4FUNCTION f4str( FIELD4 S4PTR * ) ;
S4EXPORT int S4FUNCTION f4true( const FIELD4 S4PTR * ) ;
S4EXPORT int S4FUNCTION f4type( const FIELD4 S4PTR * ) ;
   int d4packData( DATA4 * ) ;