CodeBaseServer2020/development/SpeedDemo/CODEBASE.BAS


'===============================================================================================
'
'                                 Data File Functions' Prototypes
'
'-----------------------------------------------------------------------------------------------
Declare Function d4aliasCB& Lib "cb6demo.dll" Alias "d4alias" (ByVal d4&)
Declare Sub d4aliasSet Lib "cb6demo.dll" (ByVal d4&, ByVal AliasValue$)
Declare Function d4append% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4appendBlank% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4appendStart% Lib "cb6demo.dll" (ByVal d4&, ByVal UseMemoEntries%)
Declare Sub d4blank Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4bof% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4bottom% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4changed% Lib "cb6demo.dll" (ByVal d4&, ByVal intFlag%)
Declare Function d4check% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4close% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4createCB& Lib "cb6demo.dll" Alias "d4create" (ByVal c4&, ByVal DbfName$, fieldinfo As Any, tagInfo As Any)
Declare Sub d4delete Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4deleted% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4eof% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4field& Lib "cb6demo.dll" (ByVal d4&, ByVal FieldName$)
Declare Function d4fieldInfo& Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4fieldJ& Lib "cb6demo.dll" (ByVal d4&, ByVal JField%)
Declare Function d4fieldNumber% Lib "cb6demo.dll" (ByVal d4&, ByVal FieldName$)
Declare Function d4fileNameCB& Lib "cb6demo.dll" Alias "d4fileName" (ByVal d4&)
Declare Function d4flush% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4freeBlocks% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4goLow% Lib "cb6demo.dll" (ByVal d4&, ByVal RecNum&, ByVal goForWrite%)
Declare Function d4goBof% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4goEof% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4index& Lib "cb6demo.dll" (ByVal d4&, ByVal IndexName$)
Declare Function d4log% Lib "cb6demo.dll" Alias "d4logVB" (ByVal d4&, ByVal logging%)
Declare Function d4lock% Lib "cb6demo.dll" Alias "d4lockVB" (ByVal d4&, ByVal recordNum&)
Declare Function d4lockAdd% Lib "cb6demo.dll" (ByVal d4&, ByVal recordNum&)
Declare Function d4lockAddAll% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4lockAddAppend% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4lockAddFile% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4lockAll% Lib "cb6demo.dll" Alias "d4lockAllVB" (ByVal d4&)
Declare Function d4lockAppend% Lib "cb6demo.dll" Alias "d4lockAppendVB" (ByVal d4&)
Declare Function d4lockFile% Lib "cb6demo.dll" Alias "d4lockFileVB" (ByVal d4&)
Declare Function d4logStatus% Lib "cb6demo.dll" Alias "d4logStatusCB" (ByVal d4&)
Declare Function d4memoCompress% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4numFields% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4open& Lib "cb6demo.dll" (ByVal c4&, ByVal DbfName$)
Declare Function d4openClone& Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4optimize% Lib "cb6demo.dll" Alias "d4optimizeVB" (ByVal d4&, ByVal OptFlag%)
Declare Function d4optimizeWrite% Lib "cb6demo.dll" Alias "d4optimizeWriteVB" (ByVal d4&, ByVal OptFlag%)
Declare Function d4pack% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4packData% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4position# Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4positionSet% Lib "cb6demo.dll" (ByVal d4&, ByVal Percentage#)
Declare Sub d4recall Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4recCount& Lib "cb6demo.dll" Alias "d4recCountDo" (ByVal d4&)
Declare Function d4recNo& Lib "cb6demo.dll" Alias "d4recNoLow" (ByVal d4&)
Declare Function d4record& Lib "cb6demo.dll" Alias "d4recordLow" (ByVal d4&)
Declare Function d4recWidth& Lib "cb6demo.dll" Alias "d4recWidth_v" (ByVal d4&)
Declare Function d4remove% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4refresh% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4refreshRecord% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4reindex% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4seek% Lib "cb6demo.dll" (ByVal d4&, ByVal seekValue$)
Declare Function d4seekDouble% Lib "cb6demo.dll" (ByVal d4&, ByVal value#)
Declare Function d4seekN% Lib "cb6demo.dll" (ByVal d4&, ByVal seekValue$, ByVal seekLen%)
Declare Function d4seekNext% Lib "cb6demo.dll" (ByVal d4&, ByVal seekValue$)
Declare Function d4seekNextDouble% Lib "cb6demo.dll" (ByVal d4&, ByVal seekValue#)
Declare Function d4seekNextN% Lib "cb6demo.dll" (ByVal d4&, ByVal seekValue$, ByVal seekLen%)
Declare Function d4skip% Lib "cb6demo.dll" (ByVal d4&, ByVal NumberRecords&)
Declare Function d4tag& Lib "cb6demo.dll" (ByVal d4&, ByVal TagName$)
Declare Function d4tagDefault& Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4tagNext& Lib "cb6demo.dll" (ByVal d4&, ByVal TagOn&)
Declare Function d4tagPrev& Lib "cb6demo.dll" (ByVal d4&, ByVal TagOn&)
Declare Sub d4tagSelect Lib "cb6demo.dll" (ByVal d4&, ByVal tPtr&)
Declare Function d4tagSelected& Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4tagSync% Lib "cb6demo.dll" (ByVal d4&, ByVal tPtr&)
Declare Function d4top% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4unlock% Lib "cb6demo.dll" (ByVal d4&)
Declare Function d4unlockFiles% Lib "cb6demo.dll" Alias "code4unlock" (ByVal d4&)
Declare Function d4write% Lib "cb6demo.dll" Alias "d4writeVB" (ByVal d4&, ByVal RecNum&)
Declare Function d4zap% Lib "cb6demo.dll" (ByVal d4&, ByVal StartRecord&, ByVal EndRecord&)

'===============================================================================================
'
'                                   Date Functions' Prototypes
'
'-----------------------------------------------------------------------------------------------
Declare Sub date4assignLow Lib "cb6demo.dll" (ByVal dateForm$, ByVal julianDay&, ByVal isOle%)
Declare Function date4cdowCB& Lib "cb6demo.dll" Alias "date4cdow" (ByVal dateForm$)
Declare Function date4cmonthCB& Lib "cb6demo.dll" Alias "date4cmonth" (ByVal dateForm$)
Declare Function date4day% Lib "cb6demo.dll" Alias "date4day_v" (ByVal dateForm$)
Declare Function date4dow% Lib "cb6demo.dll" (ByVal dateForm$)
Declare Sub date4formatCB Lib "cb6demo.dll" Alias "date4format" (ByVal dateForm$, ByVal Result$, ByVal pic$)
Declare Sub date4initCB Lib "cb6demo.dll" Alias "date4init" (ByVal dateForm$, ByVal value$, ByVal pic$)
Declare Function date4isLeap% Lib "cb6demo.dll" (ByVal dateForm$)
Declare Function date4long& Lib "cb6demo.dll" (ByVal dateForm$)
Declare Function date4month% Lib "cb6demo.dll" Alias "date4month_v" (ByVal dateForm$)
Declare Sub date4timeNow Lib "cb6demo.dll" (ByVal TimeForm$)
Declare Sub date4todayCB Lib "cb6demo.dll" Alias "date4today" (ByVal dateForm$)
Declare Function date4year% Lib "cb6demo.dll" Alias "date4year_v" (ByVal dateForm$)

'===============================================================================================
'
'                          Error  Functions' Prototypes
'
'-----------------------------------------------------------------------------------------------
Declare Function error4% Lib "cb6demo.dll" Alias "error4VB" (ByVal c4&, ByVal errCode%, ByVal extraInfo&)
Declare Sub error4exitTest Lib "cb6demo.dll" (ByVal c4&)
Declare Function error4describe% Lib "cb6demo.dll" Alias "error4describeVB" (ByVal c4&, ByVal errCode%, ByVal extraInfo&, ByVal desc1$, ByVal desc2$, ByVal desc3$)
Declare Function error4file% Lib "cb6demo.dll" (ByVal c4&, ByVal fileName$, ByVal overwrite%)
Declare Function error4set% Lib "cb6demo.dll" (ByVal c4&, ByVal errCode%)
Declare Function error4textCB& Lib "cb6demo.dll" Alias "error4text" (ByVal c4&, ByVal errCode&)

'===============================================================================================
'
'                          Expression Evaluation Functions' Prototypes
'
'-----------------------------------------------------------------------------------------------
Declare Function expr4data& Lib "cb6demo.dll" Alias "expr4dataCB" (ByVal exprPtr&)
Declare Function expr4double# Lib "cb6demo.dll" (ByVal exprPtr&)
Declare Sub expr4free Lib "cb6demo.dll" Alias "expr4freeCB" (ByVal exprPtr&)
Declare Function expr4len& Lib "cb6demo.dll" Alias "expr4lenCB" (ByVal exprPtr&)
Declare Function expr4nullLow% Lib "cb6demo.dll" (ByVal exprPtr&, ByVal forAdd%)
Declare Function expr4parse& Lib "cb6demo.dll" Alias "expr4parseCB" (ByVal d4&, ByVal expression$)
Declare Function expr4sourceCB& Lib "cb6demo.dll" Alias "expr4source" (ByVal exprPtr&)
Declare Function expr4strCB& Lib "cb6demo.dll" Alias "expr4str" (ByVal exprPtr&)
Declare Function expr4true% Lib "cb6demo.dll" (ByVal exprPtr&)
Declare Function expr4typeCB% Lib "cb6demo.dll" (ByVal exprPtr&)

'===============================================================================================
'
'                            Field Functions' Prototypes
'
'-----------------------------------------------------------------------------------------------
Declare Sub f4assignChar Lib "cb6demo.dll" Alias "f4assignCharVB" (ByVal fPtr&, ByVal Char%)
Declare Sub f4assignCurrency Lib "cb6demo.dll" (ByVal fPtr&, ByVal value$)
Declare Sub f4assignDateTime Lib "cb6demo.dll" (ByVal fPtr&, ByVal value$)
Declare Sub f4assignDouble Lib "cb6demo.dll" (ByVal fPtr&, ByVal value#)
Declare Sub f4assignField Lib "cb6demo.dll" (ByVal fPtrTo&, ByVal fPtrFrom&)
Declare Sub f4assignIntVB Lib "cb6demo.dll" (ByVal fPtr&, ByVal value%)
Declare Sub f4assignLong Lib "cb6demo.dll" (ByVal fPtr&, ByVal value&)
Declare Sub f4assignN Lib "cb6demo.dll" Alias "f4assignNVB" (ByVal fPtr&, ByVal value$, ByVal length%)
Declare Sub f4assignNull Lib "cb6demo.dll" (ByVal fPtr&)
Declare Sub f4blank Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4char% Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4currencyCB& Lib "cb6demo.dll" Alias "f4currency" (ByVal fPtr&, ByVal numDec%)
Declare Function f4data& Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4dateTimeCB& Lib "cb6demo.dll" Alias "f4dateTime" (ByVal fPtr&)
Declare Function f4decimals% Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4double# Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4int% Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4len% Lib "cb6demo.dll" Alias "f4len_v" (ByVal fPtr&)
Declare Function f4long& Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4memoAssign% Lib "cb6demo.dll" (ByVal fPtr&, ByVal value$)
Declare Function f4memoAssignN% Lib "cb6demo.dll" Alias "f4memoAssignNVB" (ByVal fPtr&, ByVal value$, ByVal length%)
Declare Sub f4memoFree Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4memoLen& Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4memoNcpy% Lib "cb6demo.dll" (ByVal fPtr&, ByVal memPtr$, ByVal memLen%)
Declare Function f4memoPtr& Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4nameCB& Lib "cb6demo.dll" Alias "f4name" (ByVal fPtr&)
Declare Function f4ncpyCB% Lib "cb6demo.dll" Alias "f4ncpy" (ByVal fPtr&, ByVal memPtr$, ByVal memLength%)
Declare Function f4number% Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4null% Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4ptr& Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4strCB& Lib "cb6demo.dll" Alias "f4str" (ByVal fPtr&)
Declare Function f4true% Lib "cb6demo.dll" (ByVal fPtr&)
Declare Function f4type% Lib "cb6demo.dll" (ByVal fPtr&)

